Using UITextField in UITableViewCell in LOCNewItemFormView.

--- a/Locator/LOCItemViewController.xib
+++ b/Locator/LOCItemViewController.xib
@@ -27,7 +27,7 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.87328040080000002" green="0.87328040080000002" blue="0.87328040080000002" alpha="1" colorSpace="calibratedRGB"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
