--- a/Locator/LOCItemViewController.xib
+++ b/Locator/LOCItemViewController.xib
@@ -6,6 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LOCItemViewController">
             <connections>
+                <outlet property="creationDateLabel" destination="IOi-Ti-N0e" id="6Lu-Sg-Jt6"/>
                 <outlet property="mapView" destination="l6R-dM-PKn" id="Ueh-Sz-jAl"/>
                 <outlet property="nameLabel" destination="CM6-0j-w1B" id="33Z-8Z-5OY"/>
                 <outlet property="view" destination="1" id="3"/>
