--- a/Locator/LOCSwitchUpdateLocationCell.xib
+++ b/Locator/LOCSwitchUpdateLocationCell.xib
@@ -19,12 +19,15 @@
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BGd-Wj-Tab">
+                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="BGd-Wj-Tab">
                         <rect key="frame" x="251" y="14" width="51" height="31"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </switch>
                 </subviews>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="updateLocationSwitch" destination="BGd-Wj-Tab" id="pMc-d6-L4M"/>
+            </connections>
         </tableViewCell>
     </objects>
 </document>
